; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19297.c_getresponse.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19297.c_getresponse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getresponse(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca [64 x i8], align 16
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [2 x i32*], align 16
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %11 = getelementptr inbounds [2 x i32*], [2 x i32*]* %10, i64 0, i64 0
  store i32* %9, i32** %11, align 16
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds [2 x i32*], [2 x i32*]* %10, i64 0, i64 1
  store i32* %12, i32** %13, align 8
  store i32 0, i32* %8, align 4
  br label %14

14:                                               ; preds = %44, %2
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 2
  br i1 %16, label %17, label %47

17:                                               ; preds = %14
  %18 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  store i8* %18, i8** %7, align 8
  br label %19

19:                                               ; preds = %17, %31
  %20 = load i32, i32* %3, align 4
  %21 = call i64 @read(i32 %20, i8* %5, i32 1)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %25 = call i32 @exit(i32 -1) #3
  unreachable

26:                                               ; preds = %19
  %27 = load i8, i8* %5, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp eq i32 %28, 32
  br i1 %29, label %30, label %31

30:                                               ; preds = %26
  br label %35

31:                                               ; preds = %26
  %32 = load i8, i8* %5, align 1
  %33 = load i8*, i8** %7, align 8
  %34 = getelementptr inbounds i8, i8* %33, i32 1
  store i8* %34, i8** %7, align 8
  store i8 %32, i8* %33, align 1
  br label %19

35:                                               ; preds = %30
  %36 = load i8*, i8** %7, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %7, align 8
  store i8 0, i8* %36, align 1
  %38 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %39 = call i32 @atoi(i8* %38)
  %40 = load i32, i32* %8, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds [2 x i32*], [2 x i32*]* %10, i64 0, i64 %41
  %43 = load i32*, i32** %42, align 8
  store i32 %39, i32* %43, align 4
  br label %44

44:                                               ; preds = %35
  %45 = load i32, i32* %8, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %8, align 4
  br label %14

47:                                               ; preds = %14
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local i64 @read(i32, i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
